# scrap-teses-usp

./: arquivos_processar.txt  ler_pdf.py  pyproject.toml
scrap_teses_usp/: main.py  pdfs.py
